css/style-mobile.css
body {
  margin: auto;
  max-width: 1550px;
}

li {
  list-style-type: none;
}

.top-bar {
  width: 100%;
  max-width: 1550px;
  height: 85px;
  background: #FFFFFF;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: fixed;
  z-index: 10;
  top: 0;
}

.middle {
  margin: 85px 0 40px;
}

#logo {
  width: 50px;
  height: 80px;
  padding: 20px 0 20px 20px;
}

.topnav {
  overflow: hidden;
  background-color: #FFFFFF;
  position: relative;
  font-family: 'Manrope', sans-serif;
}

.topnav #navLinks {
  display: none;
  margin-right: 5px;
}

.topnav a {
  float: left;
  color: #04ADBF;
  padding: 14px 5px;
  text-decoration: none;
  font-size: 18px;
  line-height: 26pt;
}

.topnav a.icon {
  float: right;
  font-size: 26pt;
  margin-right: 8px;
}

.topnav a.icon:visted {
  color: white;
}

.topnav a:hover {
  background-color: #FFFFFF;
  color: #F2B705;
}

.active {
  background-color: #4CAF50;
  color: #F2B705;
}

nav {
  display: none;
}

a {
  text-decoration: none;
  color: white;
}

.header {
  font-family: 'Manrope', sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 37px;
  color: #0f2d56;
  padding: 20px 50px 30px;
  font-variant: small-caps;
  text-align: center;
  margin-bottom: 30px;
}

#designer {
  font-family: 'Manrope', sans-serif;
  font-size: 20px;
  color: #0f2d56;
  padding-left: 50px;
  padding-bottom: 30px;
}

.subtitle-container {
  text-align: center;
  margin: auto;
  margin-bottom: 20px;
  display: block;
  width: max-content;
}

.border-line {
  height: 13px;
  border-radius: 5px;
  background-color: #04ADBF;
  vertical-align: baseline;
}

#tagline {
  text-align: center;
  font-family: 'Manrope', sans-serif;
  font-size: 15px;
  line-height: 155%;
  color: #0f2d56;
  padding: 0 50px;
}

#skyline-mobile {
  width: 100%;
  max-width: 330px;
  display: block;
  margin: auto;
}

#skyline {
  display: none;
}

.projects {
  display: flex;
  justify-content: space-evenly;
  flex-direction: column;
  align-items: center;
}

.project-images {
  max-width: 470px;
  width: 90%;
  position: relative;
  height: 250px;
}

.project-images img {
  display: none;
}

.project-images-two {
  max-width: 470px;
  width: 90%;
  max-height: 220px;
}

.content {
  max-width: 80%;
  margin: auto;
}

.content a {
  width: 25%;
}

.content .subtitle-container {
  margin: 50px 0px 20px 0px;
}

#vivrelivre {
  display: none;
}

.project-images img {
  width: 100%;
}

.projects p {
  font-family: 'Manrope', sans-serif;
  font-size: 15px;
  line-height: 130%;
  text-align: center;
  color: #04ADBF;
  margin: 15px;
}

.overlay {
  opacity: 1;
  background-color: white;
  opacity: 1;
  padding: 35px 35px 25px 25px;
  position: absolute;
  top: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.overlay li {
  background-color: #F2B705;
  border-radius: 10px;
  width: 190px;
  font-size: 18px;
  font-family: 'Manrope', sans-serif;
  text-align: center;
}

.overlay a {
  display: inline-block;
  height: 20px;
  width: 100%;
  padding: 20px 0;
}

.overlay h4 {
  font-family: 'Manrope', sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 25px;
  color: #04ADBF;
}

#biography {
  font-family: 'Manrope', sans-serif;
  font-size: 33px;
  text-align: left;
  color: #0f2d56;
  font-variant: small-caps;
  font-style: normal;
  font-weight: bold;
  padding-top: 130px;
  padding-bottom: 60px
}

.subtitle {
  font-family: 'Manrope', sans-serif;
  text-align: left;
  color: #0f2d56;
  font-variant: small-caps;
  font-style: normal;
  font-weight: bold;
}

.border-line {
  width: 100%;
  margin-top: 10px;
}

.first {
  font-family: 'Manrope', sans-serif;
  font-size: 16px;
  line-height: 1.75em;
  text-align: left;
  color: #0f2d56;
}

.second {
  font-family: 'Manrope', sans-serif;
  font-size: 16px;
  line-height: 1.75em;
  text-align: left;
  color: #0f2d56;
}

.third {
  font-family: 'Manrope', sans-serif;
  font-size: 16px;
  line-height: 1.75em;
  text-align: left;
  color: #0f2d56;
}
.heading-container {
  display: flex;
  flex-direction: column;
  padding-top: 40px;
  width: 100%;
}

.flex-container {
  display: flex;
  flex-direction: column;
}

#self-portrait {
  object-fit: contain;
  position: relative;
  max-height: 650px;
  float: left;
  margin-bottom: 5px;
  width: 100%;
}

.story {
  padding: 50px;
  padding-top: 0;
}

.hero-introduction {
  margin: 0 70px;
}

.hero-introduction p {
  text-align: center;
}

  .hero-introduction .header {
    padding-top: 180px;
    padding-bottom: 40px;
    padding-left: 0;
  }

#name {
  font-family: 'Manrope', sans-serif;
  font-size: 35px;
  text-align: center;
  padding: 120px 0 30px 0;
  color: #0f2d56;
}

#available {
  font-family: 'Manrope', sans-serif;
  font-size: 1.5em;
  text-align: center;
  padding: 10px;
  color: #0f2d56;
  margin-top: 60px;
  width: 100%;
}

#available a {
  color: #04ADBF;
  text-decoration: underline;
  font-style: italic;
}

.form-container {
  height: 325px;
  width: 90%;
  text-align: center;
  margin: auto;
}

input::placeholder, textarea::placeholder {
  font-family: 'Manrope', sans-serif;
  font-size: 10pt;
  text-align: center;
  color: white;
}

.form-container input {
  width: 100%;
  margin: 10px auto;
  border: 1px solid #cccccc;
  font-family: 'Manrope', sans-serif;
  background-color: #04ADBF;
  padding: 25px;
  color: white;
  box-sizing: border-box;
}

.form-container textarea {
  width: 100%;
  height: 115px;
  margin: 0 auto;
  border: 1px solid #cccccc;
  background-color: #04ADBF;
  padding: 25px;
  color: white;
  box-sizing: border-box;
}

.form-contents {
  padding: 20px;
  max-width: 600px;
  margin: auto;
}

input, textarea {
  display: block;
  font-family: 'Manrope', sans-serif;
  border-radius: 10px;
}

input[type=submit] {
  background-color: #F2B705;
  height: 40px;
  padding: 10px;
  border-radius: 20px;
}
/* ... */

